<!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".start"
    android:id="@+id/"-->

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/gradient"
    android:id="@+id/layoucik"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <!--Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:layout_marginTop="40dp"
            android:id="@+id/bfast"
            android:layout_gravity="center_horizontal" /-->

        <!--Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:layout_marginTop="40dp"
            android:id="@+id/bcalc"
            android:layout_gravity="center_horizontal" /-->

        <!--Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hist"
            android:layout_marginTop="40dp"
            android:id="@+id/bhist"
            android:layout_gravity="center_horizontal" /-->
    <Button
        android:id="@+id/bfast"
        android:text="@string/fast"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />

    <Button
        android:id="@+id/bcalc"
        android:text="@string/calc"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/bhist"
        android:text="@string/hist"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />


        <!--Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:onClick="dromader"
            android:id="@+id/bman"
            android:layout_gravity="center_horizontal" /-->
    </LinearLayout>
<!--/RelativeLayout-->
