<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context="mnemonic.com.pl.fuelconsumptioncalculator.Consumption">



    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/gradient"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_margin="30dp"
        android:id="@+id/hor"
        >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:text="@string/sumup"
                android:id="@+id/summarydtb"
                android:textAppearance="@style/simpleText"
                android:layout_gravity="center_horizontal"
                />

            </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/vert1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/yourinfocc"
                    android:id="@+id/yourinfo2"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                                      />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/yourinfoc"
                    android:id="@+id/yourinfo"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                                       />


                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/shortinfo2"
                    android:id="@+id/dbreginfo12"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/shortinfo"
                    android:id="@+id/dbreginfo1"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="right"
                    android:layout_weight="1"/>

                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/carconsumptiondet"
                    android:id="@+id/carconsumption12"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/carconsumptiondet"
                    android:id="@+id/carconsumption1"
                    android:textAppearance="@style/simpleText"
                    android:layout_gravity="right"
                    android:layout_weight="1"/>


            </LinearLayout>




        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="bottom">
            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
                <Button
                android:text="@string/CONFIRM"
                android:id="@+id/confirm"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_weight="1"
                />
                <Button
                android:text="@string/BACKTOMAIN"
                android:id="@+id/mmenu"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_weight="1"
                />


        </LinearLayout>

    </LinearLayout>


    </FrameLayout>
</RelativeLayout>
<!--
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >


     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:layout_margin="10dp"> -->
        <!-- android:background="@drawable/gradient"-->
<!--
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"

             android:layout_marginTop="10dp">


         </TableRow>

         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">




            </TableRow>


         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginRight="30dp"
             android:layout_gravity="center_vertical">

         </TableRow>

         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">


         </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/noname2">

        Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/CONFIRM"
            android:id="@+id/confirm"
            android:layout_gravity="center"
            android:gravity="end"
            android:capitalize="sentences"
            android:textAlignment="center"
            android:layout_column="1" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/BACKTOMAIN"
            android:id="@+id/mmenu"
            android:layout_gravity="center"
            android:gravity="end"
            android:capitalize="sentences"
            android:textAlignment="center"
            android:layout_column="2" />


-->
<!--
                </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"></TableRow-->
   <!--     </TableLayout>




    </LinearLayout>
-->

