<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context="mnemonic.com.pl.fuelconsumptioncalculator.fastCalculation"
    android:id="@+id/activfast">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/simpleText"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fuel"
            android:layout_margin="10dp"
            android:id="@+id/fuelinfo"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/simpleText"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_margin="10dp"
            android:id="@+id/enterfuel"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/simpleText"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/distanceinfo"
            android:text="@string/Distance"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/simpleText"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_margin="10dp"
            android:id="@+id/enterdistance"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/consumption"
            android:text="@string/enterdata"/>

        <Button
            android:id="@+id/Calculate"
            android:text="Calculate consumption"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <Button
            android:id="@+id/quitf"
            android:text="MAIN MENU"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />



    </LinearLayout>
</RelativeLayout>
