<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:focusableInTouchMode="true"
    tools:context="mnemonic.com.pl.fuelconsumptioncalculator.registeredCalculation">

    <!--ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:textSize="20dp"
            android:textAppearance="@style/simpleText"
            android:id="@+id/fuelinfo"
            android:layout_gravity="center"
            android:gravity="center" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="40dp"
            android:textAppearance="@style/simpleText"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/regenterfuel"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Distance"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textAppearance="@style/simpleText"
            android:id="@+id/distanceinfo"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="40dp"
            android:textAppearance="@style/simpleText"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/regenterdistance"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:text="@string/enterdata"
            android:id="@+id/consumption"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button
            android:id="@+id/regCalculate"
            android:text="Calculate and save refueling"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />



        </LinearLayout>

    <!--/ScrollView-->

</RelativeLayout>



    <!--



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        

        tools:context="mnemonic.com.pl.fuelconsumptioncalculator.registeredCalculation"

        android:orientation="vertical"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">





        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Calculate and save refueling"
            android:id="@+id/regCalculate"
            android:layout_gravity="center"
            android:gravity="end"
            android:capitalize="sentences"
            android:textAlignment="center" />



    </LinearLayout>

-->

